# Gaussmix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  gaussian_mixture_log.md  pyproject.toml  pytest.ini
benchmarks/: README.md  generate_benchmarks.py
configs/: default.toml
docs/: README.md  api.md  benchmarks.md  configs.md  troubleshooting.md  usage.md
examples/: README.md  gaussian_mixture_demo.ipynb
src/gaussian_mixture/: __init__.py  anomaly.py  base.py  bayesian.py  bayesian_covariance.py  benchmarks.py  check_input.py  clustering.py  covariance.py  distance.py  em.py  embedding.py  feature_selection.py  initialize.py  integration.py  kalman.py  log_predict.py  model_selection.py  params.py  predict.py  robust.py  sampling.py  serialization.py  sparse.py  streaming.py  utils.py  visualization.py  weighted.py
tests/: test_covariance.py  test_edge_cases.py  test_em.py  test_gaussian_mixture.py  test_initialize.py  test_model_selection.py  test_parallel.py  test_predict.py
