[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussmix"
version = "1.0.0"
description = "A practical Gaussian mixture model library with EM, Bayesian, robust, sparse, streaming, visualization, and benchmarking tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jayant", email = "kornjaba@gmail.com" }]
keywords = ["gaussian-mixture", "em", "clustering", "density-estimation", "machine-learning"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.0",
  "joblib>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "black>=24", "mypy>=1.10"]
docs = ["jupyter>=1", "matplotlib>=3.7", "seaborn>=0.13", "pandas>=2.0"]
benchmarks = ["pandas>=2.0", "tqdm>=4.66", "statsmodels>=0.14"]

[project.urls]
Homepage = "https://github.com/IceSpaceTech-test/Gaussmix"
Repository = "https://github.com/IceSpaceTech-test/Gaussmix"
Changelog = "https://github.com/IceSpaceTech-test/Gaussmix/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
